changes to bet placement
